[gd_scene load_steps=4 format=1]

[ext_resource path="res://flappy_enemy_left.gd" type="Script" id=1]
[ext_resource path="res://customer_six.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="flappy_enemy_left" type="Node2D"]

transform/pos = Vector2( 32.5159, 31.5453 )
script/script = ExtResource( 1 )

[node name="flappy_colliders" type="RigidBody2D" parent="." groups=[
"other_flappy",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1.41857, 0, 0, 1.84165, -9.38176, -0.0585361 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 100
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="flappy_colliders"]

transform/pos = Vector2( -9.38176, -0.0585361 )
transform/scale = Vector2( 1.41857, 1.84165 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="flappy_colliders1" type="RigidBody2D" parent="." groups=[
"flappy_die",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.883498, 0, 0, 1.84165, 13.7509, -0.0585361 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 100
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="flappy_colliders1"]

transform/pos = Vector2( 13.7509, -0.0585361 )
transform/scale = Vector2( 0.883498, 1.84165 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( -1.36023, -1.63818 )
transform/scale = Vector2( 0.366093, 0.404118 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="flip" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = true

[node name="bounce" type="Timer" parent="."]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="timeout" from="flip" to="." method="_on_flip_timeout"]


